--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <h1>Hello world!</h1>
   <a href="#">hashtag</a>
   <p><b>Привіт світ!</b></p>
+  <p><i>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt animi voluptatibus magnam voluptatem quaerat officiis assumenda, odio nisi soluta molestias modi repellendus commodi quidem corporis.</i></p>
+  <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, autem.</a></p>
+  <img src="dbmdciedm" alt="ndjd,modi">
 </body>
 </html>
